{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 34,
  "lineage": "7c38d6bb-69bb-fe31-e6c2-cdf1143e2c3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07eff2bc4837a9e01",
            "arn": "arn:aws:ec2:ap-northeast-2:852600347925:instance/i-0b60ac719680409a8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-instance-profile-1",
            "id": "i-0b60ac719680409a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5e554e471176bf4",
            "private_dns": "ip-10-0-1-22.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-3-36-119-246.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.119.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03b8e3fab2a3cf1db",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0861c5831e0d9a477",
            "tags": {
              "Name": "dev-ec2-1"
            },
            "tags_all": {
              "Name": "dev-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0999ea2578d6c52"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile_1",
            "aws_iam_role.ec2_role_1",
            "aws_security_group.sg_1",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:852600347925:internet-gateway/igw-08a97959a3d72106b",
            "id": "igw-08a97959a3d72106b",
            "owner_id": "852600347925",
            "tags": {
              "Name": "dev-igw-1"
            },
            "tags_all": {
              "Name": "dev-igw-1"
            },
            "vpc_id": "vpc-008d9a464e8facf51"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:852600347925:route-table/rtb-02821b0fef1d84235",
            "id": "rtb-02821b0fef1d84235",
            "owner_id": "852600347925",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a97959a3d72106b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt-1"
            },
            "tags_all": {
              "Name": "dev-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-008d9a464e8facf51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08789847b1947370f",
            "route_table_id": "rtb-02821b0fef1d84235",
            "subnet_id": "subnet-0861c5831e0d9a477"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.rt_1",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a7229034e8819e4",
            "route_table_id": "rtb-02821b0fef1d84235",
            "subnet_id": "subnet-06f714a31a1017cc4"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.rt_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023d46723363f3728",
            "route_table_id": "rtb-02821b0fef1d84235",
            "subnet_id": "subnet-01140f19941352654"
          },
          "dependencies": [
            "aws_internet_gateway.igw_1",
            "aws_route_table.rt_1",
            "aws_subnet.subnet_3",
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:852600347925:security-group/sg-0f0999ea2578d6c52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0999ea2578d6c52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-sg-1",
            "name_prefix": "",
            "owner_id": "852600347925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg-1"
            },
            "tags_all": {
              "Name": "dev-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-008d9a464e8facf51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:852600347925:subnet/subnet-0861c5831e0d9a477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0861c5831e0d9a477",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "852600347925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-008d9a464e8facf51"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:852600347925:subnet/subnet-06f714a31a1017cc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f714a31a1017cc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "852600347925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-2"
            },
            "tags_all": {
              "Name": "dev-subnet-2"
            },
            "vpc_id": "vpc-008d9a464e8facf51"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:852600347925:subnet/subnet-01140f19941352654",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01140f19941352654",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "852600347925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-3"
            },
            "tags_all": {
              "Name": "dev-subnet-3"
            },
            "vpc_id": "vpc-008d9a464e8facf51"
          },
          "dependencies": [
            "aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:852600347925:vpc/vpc-008d9a464e8facf51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c7ecadaf83bad19c",
            "default_route_table_id": "rtb-015e73aa701ef1ec5",
            "default_security_group_id": "sg-08de891ff98c01ea7",
            "dhcp_options_id": "dopt-0312f4ff7f4afa5c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008d9a464e8facf51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015e73aa701ef1ec5",
            "owner_id": "852600347925",
            "tags": {
              "Name": "dev-vpc-1"
            },
            "tags_all": {
              "Name": "dev-vpc-1"
            }
          }
        }
      ]
    }
  ]
}